[gd_scene load_steps=5 format=3 uid="uid://b1btiaryrhwp1"]

[ext_resource type="Script" uid="uid://cpqg7m33nixi4" path="res://scripts/game_over.gd" id="1_xeevv"]

[sub_resource type="Animation" id="Animation_jg8ls"]
length = 0.15
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:material:shader_parameter/lod")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.15, 0, 0.15, 0),
"times": PackedFloat32Array(0)
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PanelContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_05lnj"]
resource_name = "blur"
length = 0.3
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:material:shader_parameter/lod")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(0, -0.15, 0, 0.15, 0, 0.597, -0.15, 0, 0.15, 0),
"times": PackedFloat32Array(0, 0.3)
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PanelContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_u063c"]
_data = {
&"RESET": SubResource("Animation_jg8ls"),
&"blur": SubResource("Animation_05lnj")
}

[node name="GameOver" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xeevv")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -70.5
offset_top = -100.0
offset_right = 78.5
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect/PanelContainer"]
layout_mode = 2
size_flags_vertical = 4

[node name="Label" type="Label" parent="ColorRect/PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Game Over"

[node name="NewGame" type="Button" parent="ColorRect/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "New Game"

[node name="QuitToMenu" type="Button" parent="ColorRect/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Exit to Menu"

[node name="QuitButton" type="Button" parent="ColorRect/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Quit"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_u063c")
}

[node name="HttpRequest" type="HTTPRequest" parent="."]

[connection signal="pressed" from="ColorRect/PanelContainer/VBoxContainer/NewGame" to="." method="_on_new_game_pressed"]
[connection signal="pressed" from="ColorRect/PanelContainer/VBoxContainer/QuitToMenu" to="." method="_on_quit_to_menu_pressed"]
[connection signal="pressed" from="ColorRect/PanelContainer/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
